# prime-number-ring

./: Cargo.toml  output.csv  plot_props.py
src/: main.rs
