[package]
name = "gatekeeper"
version = "0.1.0"
authors = ["Ethan McCue <emccue@live.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
primes = "0.3.0"
progressive = "0.1"
plotly = "0.4.1"
rayon = "1.3.0"
indicatif = {version = "0.14.0", features = ["with_rayon"]}
